fix: make the process of joining a board clearer
I added the board id next to the board's title in the board overview. I also added some text to join board and edit board to clarify how to join board and what sharing a board id entails.

--- a/client/src/main/resources/client/scenes/EditBoard.fxml
+++ b/client/src/main/resources/client/scenes/EditBoard.fxml
@@ -31,7 +31,7 @@
                         <Insets />
                     </VBox.margin>
                 </TextField>
-                <Label prefHeight="26.0" text="Board ID:" />
+                <Label prefHeight="26.0" text="Board ID (share this with others so they can join your board):" />
                 <TextField editable="false" fx:id="boardId" />
             </VBox>
         </Pane>
