--- a/client/src/main/resources/client/scenes/JoinBoard.fxml
+++ b/client/src/main/resources/client/scenes/JoinBoard.fxml
@@ -4,6 +4,7 @@
 
 <?import javafx.scene.control.*?>
 
+<?import javafx.scene.text.Text?>
 <BorderPane xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="client.scenes.JoinBoardCtrl"
@@ -12,13 +13,16 @@
 
     <top>
         <HBox alignment="CENTER">
-            <Label styleClass="instruction">Add a board</Label>
+            <Label styleClass="instruction">Join a board</Label>
         </HBox>
     </top>
     <center>
         <VBox maxWidth="400">
             <Region VBox.vgrow="ALWAYS"/>
-            <Label>board id:</Label>
+            <Label wrapText="true">Join a board of a friend by entering their board's ID below.
+                You can find this ID next to a board's title, or you can copy it from the menu where you edit the board title.</Label>
+            <Region prefHeight="16.0" />
+            <Label style="-fx-font-size: 1.5em;">Board ID:</Label>
             <TextField fx:id="boardId"/>
             <Region VBox.vgrow="ALWAYS"/>
         </VBox>
