--- a/client/src/main/resources/client/scenes/RenameListPopup.fxml
+++ b/client/src/main/resources/client/scenes/RenameListPopup.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="root" maxHeight="1.7976931348623157E308" xmlns="http://javafx.com/javafx/17.0.2-ea"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.RenameListPopupCtrl"
-            stylesheets="@../styles/RenameListPopup.css">
+<BorderPane fx:id="root" maxHeight="1.7976931348623157E308" stylesheets="@../styles/RenameListPopup.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.RenameListPopupCtrl">
     <bottom>
         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
@@ -25,11 +28,13 @@
                 <padding>
                     <Insets bottom="8.0" left="8.0" right="20.0" top="8.0" />
                 </padding>
+            <Label text="List TItle" textFill="WHITE" />
                 <TextField fx:id="listTitle" prefHeight="26.0" prefWidth="222.0">
                     <VBox.margin>
                         <Insets />
                     </VBox.margin>
                 </TextField>
+            <Label fx:id="errorMessage" textFill="RED" />
             </VBox>
         </Pane>
     </center>
