--- a/client/src/main/resources/client/scenes/DeleteListPopup.fxml
+++ b/client/src/main/resources/client/scenes/DeleteListPopup.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #555555; -fx-border-color: #333333; -fx-border-width: 5px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.DeleteListPopupCtrl">
-    <Label fx:id="label" layoutX="56.0" layoutY="65.0" prefHeight="190.0" prefWidth="491.0" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+    <Label fx:id="listTitleLabel" layoutX="56.0" layoutY="65.0" prefHeight="190.0" prefWidth="491.0" textAlignment="CENTER" textFill="WHITE" wrapText="true">
         <font>
             <Font size="28.0" />
         </font>
