--- a/client/src/main/resources/client/scenes/AddCard.fxml
+++ b/client/src/main/resources/client/scenes/AddCard.fxml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.AddCardCtrl">
-    <TextField fx:id="title" layoutX="35.0" layoutY="97.0" prefHeight="95.0" prefWidth="492.0" />
-    <Label layoutX="35.0" layoutY="27.0" text="Title:">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="275.0" prefWidth="562.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.AddCardCtrl">
+    <TextField fx:id="title" alignment="CENTER" layoutX="33.0" layoutY="84.0" prefHeight="95.0" prefWidth="492.0">
+      <font>
+         <Font size="36.0" />
+      </font></TextField>
+    <Label layoutX="33.0" layoutY="14.0" text="Title">
         <font>
             <Font size="48.0" />
         </font>
     </Label>
-    <Button layoutX="426.0" layoutY="320.0" mnemonicParsing="false" onAction="#ok" text="Create">
+    <Button layoutX="305.0" layoutY="202.0" mnemonicParsing="false" onAction="#ok" text="Create">
         <font>
             <Font size="24.0" />
         </font>
     </Button>
-    <Button fx:id="cancel" layoutX="300.0" layoutY="320.0" mnemonicParsing="false" onAction="#closeWindow" text="Cancel">
+    <Button fx:id="cancel" layoutX="139.0" layoutY="202.0" mnemonicParsing="false" onAction="#closeWindow" text="Cancel">
         <font>
             <Font size="24.0" />
         </font>
