--- a/client/src/main/resources/client/scenes/CardPopup.fxml
+++ b/client/src/main/resources/client/scenes/CardPopup.fxml
@@ -4,15 +4,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="root" maxHeight="1.7976931348623157E308" stylesheets="@../styles/CardPopup.css"
-            xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="client.scenes.CardPopupCtrl">
+<BorderPane fx:id="root" maxHeight="1.7976931348623157E308" stylesheets="@../styles/CardPopup.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.scenes.CardPopupCtrl">
     <bottom>
         <ButtonBar fx:id="buttonBar" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <buttons>
@@ -23,27 +19,25 @@
                 <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveCardChanges" text="Save" />
             </buttons>
             <BorderPane.margin>
-                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0"/>
+                <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
             </BorderPane.margin>
         </ButtonBar>
     </bottom>
     <center>
-        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" hmax="0.0" maxHeight="1.7976931348623157E308"
-                    BorderPane.alignment="CENTER">
-            <VBox maxHeight="1.7976931348623157E308">
-                <padding>
-                    <Insets bottom="8.0" left="8.0" right="20.0" top="8.0"/>
-                </padding>
-                <TextField fx:id="cardTitle">
-                    <VBox.margin>
-                        <Insets/>
-                    </VBox.margin>
-                </TextField>
-                <ChoiceBox fx:id="list" prefWidth="150.0"/>
-                <TextArea fx:id="cardDescription" prefHeight="100.0" prefWidth="200.0">
-
-                </TextArea>
-            </VBox>
-        </ScrollPane>
+         <VBox maxHeight="1.7976931348623157E308">
+             <padding>
+                 <Insets bottom="8.0" left="8.0" right="20.0" top="8.0" />
+             </padding>
+             <TextField fx:id="cardTitle">
+                 <VBox.margin>
+                     <Insets bottom="15.0" />
+                 </VBox.margin>
+             </TextField>
+             <ChoiceBox fx:id="list" prefWidth="150.0">
+            <VBox.margin>
+               <Insets />
+            </VBox.margin>
+         </ChoiceBox>
+         </VBox>
     </center>
 </BorderPane>
